<resources>
    <string name="app_name">Adogption</string>
    <string name="create_acct">Create Account</string>
    <string name="loginBtn">LOGIN</string>
    <string name="title_activity_user_home">UserHome</string>
    <string name="search_btn">Search</string>
    <string name="profile_btn">Profile</string>
    <string name="favs_btn">Favorites</string>
    <string name="requests_btn">View Requests</string>
    <string name="manage_pets_btn">Manage Pets</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="add_pet_btn">Add Pet</string>
    <string name="to_owner_home">Owner Home</string>
    <string name="favorite">Favorite</string>
    <string name="contact_owner"> Contact Owner </string>
    <string-array name="animal_type_array">
        <item>Dog</item>
        <item>Cat</item>
    </string-array>
    <string-array name="account_type_array">
        <item>User</item>
        <item>Owner</item>
    </string-array>
    <string-array name="search_filter_array">
        <item>Name</item>
        <item>Breed</item>
        <item>Animal</item>
        <item>Age</item>
    </string-array>

</resources>
