<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mobile4623.easy.adogption.OwnerHome">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".4"
            android:layout_gravity="center_horizontal"></RelativeLayout>

        <Button
            android:id="@+id/view_requests_button"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:layout_gravity="center"
            android:text="@string/requests_btn"
            android:textSize="23dp"
            android:background="@drawable/button_rounded"
            android:layout_marginBottom="2dp"/>

        <Button
            android:id="@+id/manage_pets_button"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:layout_gravity="center"
            android:text="@string/manage_pets_btn"
            android:textSize="20dp"
            android:background="@drawable/button_rounded"
            android:layout_marginBottom="2dp"/>

        <Button
            android:id="@+id/add_pets_button"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:layout_gravity="center"
            android:text="@string/add_pet_btn"
            android:textSize="30dp"
            android:background="@drawable/button_rounded"
            android:layout_marginBottom="2dp"/>

        <Button
            android:id="@+id/profile_button"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:layout_gravity="center"
            android:text="@string/profile_btn"
            android:textSize="30dp"
            android:background="@drawable/button_rounded"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"/>

    </LinearLayout>


</RelativeLayout>
