<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginScreen"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/app_name"
            android:layout_weight="0.13"
            android:textAlignment="center"
            android:textSize="44dp"
            android:textColor="@color/White"
           />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".15"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:textColor="@color/White"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:textColor="@color/White"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"/>

        <LinearLayout
            android:id="@+id/login_buttons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:orientation="horizontal">

            <Space
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight=".1"/>

            <Button
                android:id="@+id/createAcct"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:layout_height="match_parent"
                android:text="@string/create_acct"
                android:background="@drawable/button_rounded" />

            <Space
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight=".2"/>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:layout_height="match_parent"
                android:text="@string/loginBtn"
                android:background="@drawable/button_rounded"/>

            <Space
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight=".1"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"/>

    </LinearLayout>
</RelativeLayout>
